freebsd-utils (8.0-9) UNRELEASED; urgency=low

  * Add /etc/pf.os to freebsd-net-tools
  * Add a vidcontrol package containing the executable, the font maps
    and the screen maps. Closes: bug#544083.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Jan 2010 20:30:35 +0100

freebsd-utils (8.0-8) unstable; urgency=low

  * debian/patches/026_kdump.diff: don't parse <sys/acl.h> in auto mode.
  * Build-depends on libedit-dev. Closes: bug#566774.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 25 Jan 2010 12:34:52 +0100

freebsd-utils (8.0-7) unstable; urgency=low

  * Fix clean rule.
  * Fix build with newer <sys/ptrace.h>. 
  * Use <bsd/stdlib.h> instead of deprecated <bsd/random.h>.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 24 Jan 2010 14:07:33 +0100

freebsd-utils (8.0-6) unstable; urgency=low

  * mount: assume that the mount helpers are located in /sbin instead of
    looking in $PATH, which may not contain /sbin when called from 
    scripts.
  * Add kdump and ppctl binaries. Closes: bug#557247.
  * Move ktrace to /usr/bin. 

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 24 Jan 2010 03:14:27 +0100

freebsd-utils (8.0-5) unstable; urgency=low

  * Add build-depends on libcam-dev for camcontrol. 

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 17 Jan 2010 22:06:41 +0100

freebsd-utils (8.0-4) unstable; urgency=low

  * Add atacontrol and camcontrol binaries. 

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 17 Jan 2010 18:31:25 +0100

freebsd-utils (8.0-3) unstable; urgency=low

  * Add acpiconf and devd binaries, patch by Werner Koch.
  * Add devfs binary.
  * Load /dev permissions through from /etc/devfs.d/* instead of 
    setting them manually at boot time.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 17 Jan 2010 16:58:42 +0100

freebsd-utils (8.0-2) unstable; urgency=low

  * freebsd-utils.init: fix quoting, and use a symbolic links instead
    of an hardlink (closes: #560125).
  * freebsd-utils: conflicts with module-init-tools (closes: #559344). 
