@@ -3,8 +3,9 @@ freebsd-utils (8.0-9) UNRELEASED; urgency=low
   * Add /etc/pf.os to freebsd-net-tools
   * Add a vidcontrol package containing the executable, the font maps
     and the screen maps. Closes: bug#544083.
+  * Update patches/016_swapon.diff to fix segfault on kfreebsd-amd64.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 27 Jan 2010 20:30:35 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Jan 2010 15:58:29 +0100
 
 freebsd-utils (8.0-8) unstable; urgency=low
 
